[tool.poetry]
name = "pythonproject10-1-5"
version = "0.1.0"
description = ""
authors = ["Eduard <barned85@gmail.com>"]
readme = "README.md"
packages = [{include = "pythonproject10_1_5"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
